changed bugapoint menu to a list with button

--- a/src/app/admin-components/bugapoint-management/bugapointlist/bugapointlist.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointlist/bugapointlist.component.css
@@ -50,3 +50,26 @@ mat-progress-bar {
   margin-right: auto;
   margin-top: 2vw;
 }
+
+.list-item {
+  display: flex;
+  align-items: center;
+  margin-right: 100px;
+}
+
+.item-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: fit-content;
+}
+
+.item-text {
+  margin-left: 5vw;
+  font-size: 15px;
+}
+
+.item-button {
+  margin-right: 2vw;
+}
